force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Position__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead teacher/head teacher/co-teacher</fullName>
            </value>
            <value>
                <fullName>Administrator/Director</fullName>
            </value>
            <value>
                <fullName>Floater</fullName>
            </value>
            <value>
                <fullName>Substitute</fullName>
            </value>
            <value>
                <fullName>Cook/Nutrition/Dietician</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Assistant director/ Assistant Administrator</fullName>
            </value>
            <value>
                <fullName>Support Staff/Administrative</fullName>
            </value>
            <value>
                <fullName>Teacher&apos;s aide, teacher assistant/student aide</fullName>
            </value>
            <value>
                <fullName>Family Service Worker</fullName>
            </value>
            <value>
                <fullName>Bus Driver/Bus aide/Bus monitor</fullName>
            </value>
            <value>
                <fullName>Education specialist/ Education Coordinator</fullName>
            </value>
            <value>
                <fullName>Specialist/Therapist (speech/language, etc.)</fullName>
            </value>
            <value>
                <fullName>Social Worker</fullName>
            </value>
            <value>
                <fullName>Director ( Administrator)</fullName>
            </value>
            <value>
                <fullName>Head teacher</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Preschool Staff member</fullName>
            </value>
            <value>
                <fullName>Non-Teaching Employee</fullName>
            </value>
            <value>
                <fullName>Extended care staff</fullName>
            </value>
            <value>
                <fullName>Second adult</fullName>
            </value>
            <value>
                <fullName>Infant toddler care staff</fullName>
            </value>
            <value>
                <fullName>Substitute teacher</fullName>
            </value>
            <value>
                <fullName>Substitute staff</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Team leader</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Responsible Individual</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>