force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Professional_Development_Completed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Professional_Development_Completed__c</fullName>
    <label>Professional Development Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Enough PD</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
            <value>
                <fullName>PD Not Acceptable</fullName>
            </value>
            <value>
                <fullName>Falsified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>