force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Staff Records</relationshipLabel>
    <relationshipName>Staff_Records</relationshipName>
    <type>Lookup</type>
</CustomField>