force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Staff_Orientation_Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Staff_Orientation_Training_Completed__c</fullName>
    <label>Staff Orientation Training Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Falsified</fullName>
            </value>
            <value>
                <fullName>In Compliance</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>No Orientation</fullName>
            </value>
            <value>
                <fullName>No Orientation – Sole Responsibility</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>