force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Status__c</fullName>
    <label>PD Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>