force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Still_Employed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Still_Employed__c</fullName>
    <label>Still Employed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>