force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Teaching_Field__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Teaching_Field__c</fullName>
    <label>Teaching Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>