force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Training_Met__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Training_Met__c</fullName>
    <label>Training Met</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>SUTQ</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>