force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Unverified_Points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Unverified_Points__c</fullName>
    <description>Can be entered manually or populated from OPR Pull</description>
    <label>Unverified Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>