force-app/main/default/objects/CLQ_Staff_Record__c/fields/CLQ_Used_In_Ratio__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Used_In_Ratio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used In Ratio</label>
    <type>Checkbox</type>
</CustomField>