force-app/main/default/objects/CLQ_Staff_Record__c/fields/CPL_Pending_Level__c.field-meta.xml
<CustomField>
    <fullName>CPL_Pending_Level__c</fullName>
    <label>CPL Pending Level</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>