force-app/main/default/objects/CLQ_Staff_Record__c/fields/ERC_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>ERC_Employee_ID__c</fullName>
    <description>ERC_employee_ID from API</description>
    <label>ERC Employee ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>