force-app/main/default/objects/CLQ_Staff_Record__c/fields/ERC_Number__c.field-meta.xml
<CustomField>
    <fullName>ERC_Number__c</fullName>
    <description>ERC_id from API</description>
    <label>ERC Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>