force-app/main/default/objects/CLQ_Staff_Record__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <description>background_check_Expiration from API</description>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>