force-app/main/default/objects/CLQ_Staff_Record__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Individual&apos;s first name</description>
    <label>First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>