force-app/main/default/objects/CLQ_Staff_Record__c/fields/Is_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>education_is_related from API</description>
    <label>Is Related</label>
    <type>Checkbox</type>
</CustomField>