force-app/main/default/objects/CLQ_Staff_Record__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Individual&apos;s last name</description>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>