force-app/main/default/objects/CLQ_Staff_Record__c/fields/Medical_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Completed_Date__c</fullName>
    <description>medical_date_completed from API</description>
    <label>Medical Completed Date</label>
    <type>Date</type>
</CustomField>