force-app/main/default/objects/CLQ_Staff_Record__c/fields/Most_Recent_Background_Check_Request__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Background_Check_Request__c</fullName>
    <description>background_check_most_recent_1175 from API</description>
    <label>Most Recent Background Check Request</label>
    <type>Date</type>
</CustomField>