force-app/main/default/objects/CLQ_Staff_Record__c/fields/OPINtext__c.field-meta.xml
<CustomField>
    <fullName>OPINtext__c</fullName>
    <formula>TEXT(CLQ_OPIN__c)</formula>
    <label>OPINtext</label>
    <type>Text</type>
</CustomField>