force-app/main/default/objects/CLQ_Staff_Record__c/fields/Original_Staff_Record__c.field-meta.xml
<CustomField>
    <fullName>Original_Staff_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Record</label>
    <referenceTo>CLQ_Staff_Record__c</referenceTo>
    <relationshipLabel>Staff Records</relationshipLabel>
    <relationshipName>Staff_Records</relationshipName>
    <type>Lookup</type>
</CustomField>