force-app/main/default/objects/CLQ_Staff_Record__c/fields/PD_Compliance_Code__c.field-meta.xml
<CustomField>
    <fullName>PD_Compliance_Code__c</fullName>
    <description>licensing_pd_compliance_reasons from API</description>
    <label>PD Compliance Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Compiance</fullName>
            </value>
            <value>
                <fullName>Insufficient PD Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>