force-app/main/default/objects/CLQ_Staff_Record__c/fields/PD_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>PD_Compliance_Status__c</fullName>
    <description>icensing_pd_compliance_status from API</description>
    <label>PD Compliance Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>