force-app/main/default/objects/CLQ_Staff_Record__c/fields/Position_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_End_Date__c</fullName>
    <label>Position End Date</label>
    <type>Date</type>
</CustomField>