force-app/main/default/objects/CLQ_Staff_Record__c/fields/Position_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_Start_Date__c</fullName>
    <label>Position Start Date</label>
    <type>Date</type>
</CustomField>