force-app/main/default/objects/CLQ_Staff_Record__c/fields/Staff_Orientation_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Staff_Orientation_Date_Completed__c</fullName>
    <description>staff_orientation_date_completed from API</description>
    <label>Staff Orientation Date Completed</label>
    <type>Date</type>
</CustomField>