force-app/main/default/objects/CLQ_Staff_Record__c/recordTypes/Licensing_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Licensing_Recordtype</fullName>
    <active>true</active>
    <label>Licensing Recordtype</label>
</RecordType>