force-app/main/default/objects/CLQ_Staff_Record__c/recordTypes/SUTQ_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>SUTQ_Recordtype</fullName>
    <active>true</active>
    <label>SUTQ Recordtype</label>
</RecordType>