force-app/main/default/objects/CLQ_Staff_Record__c/validationRules/CLQ_Staff_Training_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Staff_Training_Required</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND( CLQ_Used_In_Ratio__c = true, ISBLANK(  (CLQ_Staff_Orientation_Training_Completed__c )))</errorConditionFormula>
    <errorMessage>Staff Orientation Training Completed is required when Used in Ratio is checked</errorMessage>
</ValidationRule>