force-app/main/default/objects/CLQ_Staff_Record__c/validationRules/Program_Transaction_onsite_visit_pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Transaction_onsite_visit_pending</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; ISPICKVAL(CLQ_Program_Transaction__r.CLQ_Transaction_Status__c ,&apos;Onsite Visit Pending&apos;)</errorConditionFormula>
    <errorMessage>Program transaction status is Onsite Visit Pending</errorMessage>
</ValidationRule>