force-app/main/default/objects/CLQ_Staff_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Program_Transaction__c</columns>
    <columns>CLQ_Inspection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>